package ClientCommunicate;

option java_package = "com.protobuf";
option java_outer_classname = "ClientCommunicate";

// QM上传自身用户名与token的绑定信息
message QMSetTokenReq
{
	required string userName  = 1; // 用户名
	required string token     = 2; // token
}
message QMSetTokenRsp
{
	required int32 errorCode  = 1; 
}

// web与QM的相互通讯接口
message SendMsgToClientReq
{
	required int32 clientType = 1; // 【0：QM向web发消息；1：web向QM发消息】
	required string userName  = 2; // 用户名
	required string msgName   = 3; // 消息名称
	required bytes msgContent = 4; // 消息protobuf二进制内容
}
message SendMsgToClientRsp
{
	required int32 errorCode  = 1; 
}


// web/QM接收到的通知
message PubReceiveMsgInfo
{
	required string userName  = 1; // 用户名
	required string msgName   = 2; // 消息名称
	required bytes msgContent = 3; // 消息protobuf二进制内容
}